--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,23 +19,13 @@ kafka-python==2.0.2
 confluent-kafka==2.3.0
 aiokafka==0.12.0
 
-# ML/DL
+# AI/ML 모델 서빙 (필수) - torch는 Dockerfile에서 CPU 버전으로 설치
 scikit-learn==1.3.2
-torch==2.1.1
-torchvision==0.16.1
+xgboost==2.0.2
 numpy==1.24.3
 pandas==2.0.3
 scipy==1.10.1
-xgboost==2.0.2
 joblib==1.3.2
-
-# 모델 서빙
-bentoml==1.4.18
-
-# 시계열 데이터 처리
-tslearn==0.6.2
-statsmodels==0.14.0
-plotly==5.17.0
 
 # 인증 및 보안
 python-jose[cryptography]==3.3.0
@@ -49,10 +39,8 @@ requests==2.31.0
 # 모니터링
 prometheus-client==0.19.0
 
-# 유틸리티 및 테스트
+# 유틸리티
 python-dotenv==1.0.0
-pytest==7.4.3
-pytest-asyncio==0.21.1
 redis==5.0.1
 celery==5.3.4
 schedule==1.2.0
@@ -62,8 +50,3 @@ loguru==0.7.2
 opentelemetry-api==1.21.0
 opentelemetry-sdk==1.21.0
 opentelemetry-semantic-conventions==0.42b0
-
-# 개발 도구
-black==23.11.0
-isort==5.12.0
-flake8==6.1.0
