--- a/backend/.github/workflows/deploy.yml
+++ b/backend/.github/workflows/deploy.yml
@@ -30,11 +30,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r demo/requirements.txt
+        pip install -r backend/requirements.txt
 
     - name: Run tests
       run: |
-        cd demo
+        cd backend
         python -m pytest tests/ -v
 
     - name: Setup Google Cloud CLI
@@ -51,14 +51,23 @@ jobs:
       run: |-
         gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
 
-    - name: Build Docker image
+    - name: Build Backend Docker image
       run: |-
-        cd demo
+        cd backend
         docker build -t "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" .
 
-    - name: Publish Docker image to GCR
+    - name: Build Frontend Docker image
+      run: |-
+        cd frontend
+        docker build -t "gcr.io/$PROJECT_ID/smart-factory-frontend:$GITHUB_SHA" .
+
+    - name: Publish Backend Docker image to GCR
       run: |-
         docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
+
+    - name: Publish Frontend Docker image to GCR
+      run: |-
+        docker push "gcr.io/$PROJECT_ID/smart-factory-frontend:$GITHUB_SHA"
 
     - name: Set up Kustomize
       run: |-
@@ -67,7 +76,7 @@ jobs:
 
     - name: Deploy infrastructure to GKE
       run: |-
-        cd demo
+        cd backend
         
         # 네임스페이스 생성
         kubectl apply -f k8s/namespace.yaml
@@ -89,10 +98,11 @@ jobs:
 
     - name: Deploy applications to GKE
       run: |-
-        cd demo
+        cd backend
         
         # 이미지 태그 업데이트
-        sed -i "s|gcr.io/PROJECT_ID|gcr.io/$PROJECT_ID|g" k8s/smart-factory-apps.yaml
+        sed -i "s|gcr.io/PROJECT_ID/smart-factory-backend|gcr.io/$PROJECT_ID/smart-factory-backend|g" k8s/smart-factory-apps.yaml
+        sed -i "s|gcr.io/PROJECT_ID/smart-factory-frontend|gcr.io/$PROJECT_ID/smart-factory-frontend|g" k8s/smart-factory-apps.yaml
         sed -i "s|:latest|:$GITHUB_SHA|g" k8s/smart-factory-apps.yaml
         
         # 애플리케이션 배포
@@ -103,6 +113,7 @@ jobs:
         kubectl rollout status deployment/data-collector -n smart-factory
         kubectl rollout status deployment/ai-model-service -n smart-factory
         kubectl rollout status deployment/sensor-simulator -n smart-factory
+        kubectl rollout status deployment/smart-factory-frontend -n smart-factory
 
     - name: Verify deployment
       run: |-
@@ -132,7 +143,7 @@ jobs:
       uses: aquasecurity/trivy-action@master
       with:
         scan-type: 'fs'
-        scan-ref: './demo'
+        scan-ref: './backend'
         format: 'sarif'
         output: 'trivy-results.sarif'
         
