--- a/backend/k8s/smart-factory-apps.yaml
+++ b/backend/k8s/smart-factory-apps.yaml
@@ -201,4 +201,57 @@ spec:
             cpu: "100m"
           limits:
             memory: "512Mi"
-            cpu: "200m" 
+            cpu: "200m"
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: smart-factory-frontend
+  namespace: smart-factory
+  labels:
+    app: smart-factory-frontend
+spec:
+  ports:
+  - port: 3000
+    targetPort: 3000
+    name: http
+  selector:
+    app: smart-factory-frontend
+  type: LoadBalancer
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: smart-factory-frontend
+  namespace: smart-factory
+  labels:
+    app: smart-factory-frontend
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: smart-factory-frontend
+  template:
+    metadata:
+      labels:
+        app: smart-factory-frontend
+    spec:
+      containers:
+      - name: frontend
+        image: gcr.io/PROJECT_ID/smart-factory-frontend:latest
+        ports:
+        - containerPort: 3000
+        env:
+        - name: NEXT_PUBLIC_API_URL
+          value: "http://smart-factory-backend:8000"
+        - name: NODE_ENV
+          value: "production"
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m" 
