refactor: Gitactions Path

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -1,9 +1,16 @@
-name: CI
+name: Frontend CI
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "develop"]
+    paths:
+      - 'frontend/**'
+      - '.github/workflows/frontend-ci.yml'
   pull_request:
+    branches: ["main"]
+    paths:
+      - 'frontend/**'
+      - '.github/workflows/frontend-ci.yml'
 
 jobs:
   build-test:
