--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -1,10 +1,18 @@
-name: CI/CD Pipeline for Smart Factory
+name: Backend Deploy to GCP
 
 on:
   push:
     branches: [ main, develop ]
+    paths: 
+      - 'backend/**'
+      - 'ai/**'
+      - '.github/workflows/backend-deploy.yml'
   pull_request:
     branches: [ main ]
+    paths: 
+      - 'backend/**'
+      - 'ai/**'
+      - '.github/workflows/backend-deploy.yml'
 
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
@@ -51,23 +59,14 @@ jobs:
       run: |-
         gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
 
-    - name: Build Backend Docker image
+    - name: Build Docker image
       run: |-
         cd backend
         docker build -t "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" .
 
-    - name: Build Frontend Docker image
-      run: |-
-        cd frontend
-        docker build -t "gcr.io/$PROJECT_ID/smart-factory-frontend:$GITHUB_SHA" .
-
-    - name: Publish Backend Docker image to GCR
+    - name: Publish Docker image to GCR
       run: |-
         docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
-
-    - name: Publish Frontend Docker image to GCR
-      run: |-
-        docker push "gcr.io/$PROJECT_ID/smart-factory-frontend:$GITHUB_SHA"
 
     - name: Set up Kustomize
       run: |-
@@ -100,20 +99,18 @@ jobs:
       run: |-
         cd backend
         
-        # 이미지 태그 업데이트
+        # 백엔드 이미지 태그 업데이트
         sed -i "s|gcr.io/PROJECT_ID/smart-factory-backend|gcr.io/$PROJECT_ID/smart-factory-backend|g" k8s/smart-factory-apps.yaml
-        sed -i "s|gcr.io/PROJECT_ID/smart-factory-frontend|gcr.io/$PROJECT_ID/smart-factory-frontend|g" k8s/smart-factory-apps.yaml
-        sed -i "s|:latest|:$GITHUB_SHA|g" k8s/smart-factory-apps.yaml
+        sed -i "s|smart-factory-backend:latest|smart-factory-backend:$GITHUB_SHA|g" k8s/smart-factory-apps.yaml
         
         # 애플리케이션 배포
         kubectl apply -f k8s/smart-factory-apps.yaml
         
-        # 롤아웃 상태 확인
+        # 백엔드 서비스 롤아웃 상태 확인
         kubectl rollout status deployment/$DEPLOYMENT_NAME -n smart-factory
         kubectl rollout status deployment/data-collector -n smart-factory
         kubectl rollout status deployment/ai-model-service -n smart-factory
         kubectl rollout status deployment/sensor-simulator -n smart-factory
-        kubectl rollout status deployment/smart-factory-frontend -n smart-factory
 
     - name: Verify deployment
       run: |-
