--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
-    "test:clean": "rimraf .next && jest",
-    "pretest": "rimraf .next"
+    "pretest": "npm run build",
+    "test": "jest"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@sentry/nextjs": "^9.34.0",
     "@tanstack/react-query": "^5.81.5",
     "framer-motion": "^12.23.0",
-    "i18next": "^23.16.8",
     "jsonwebtoken": "^9",
     "jspdf": "^3.0.1",
     "next": "15.3.4",
@@ -24,8 +22,6 @@
     "next-intl": "^4.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-i18next": "^15.4.2", 
-    "react-is": "^18.3.1",
     "recharts": "^3.0.2",
     "ws": "^8.17.0",
     "xlsx": "^0.18.5",
@@ -34,10 +30,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -49,7 +43,6 @@
     "jest": "^30.0.3",
     "jest-environment-jsdom": "^30.0.2",
     "jest-websocket-mock": "^2.5.0",
-    "rimraf": "^6.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
