Docker models read mount

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -51,7 +51,8 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://user:password@localhost:5432/predictive_maintenance
+# sqlalchemy.url = postgresql://user:password@localhost:5432/predictive_maintenance
+# 환경변수에서 DATABASE_URL을 사용하도록 설정됨 (alembic/env.py에서 처리)
 
 
 [post_write_hooks]
