--- a/backend/k8s/smart-factory-apps.yaml
+++ b/backend/k8s/smart-factory-apps.yaml
@@ -79,6 +79,15 @@ spec:
             port: 8000
           initialDelaySeconds: 5
           periodSeconds: 5
+        volumeMounts:
+        - name: models-storage
+          mountPath: /app/models
+          readOnly: true
+      volumes:
+      - name: models-storage
+        hostPath:
+          path: /models
+          type: DirectoryOrCreate
 
 ---
 apiVersion: apps/v1
@@ -159,6 +168,7 @@ spec:
         volumeMounts:
         - name: models-storage
           mountPath: /app/models
+          readOnly: true
         resources:
           requests:
             memory: "1Gi"
@@ -168,7 +178,9 @@ spec:
             cpu: "1000m"
       volumes:
       - name: models-storage
-        emptyDir: {}
+        hostPath:
+          path: /models
+          type: DirectoryOrCreate
 
 ---
 apiVersion: apps/v1
