--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -1,20 +1,19 @@
-name: "[LEGACY] Backend Deploy to GCP"
+name: "Backend Deploy to GCP (Kafka+Timescale+serve_ml)"
 
-# LEGACY WORKFLOW - DISABLED
-# This workflow has been replaced by core-cluster-deploy.yml and compute-cluster-deploy.yml
+## Updated workflow for single-cluster deploy with Kafka+Timescale and serve_ml
 on:
   workflow_dispatch:  # Manual trigger only
-  # push:
-  #   branches: [ main, develop ]
-  #   paths: 
-  #     - 'backend/**'
-  #     - '.github/workflows/backend-deploy.yml'
+  push:
+    branches: [ main ]
+    paths: 
+      - 'backend/**'
+      - '.github/workflows/backend-deploy.yml'
   # pull_request:
   #   branches: [ main ]
   #   paths: 
   #     - 'backend/**'
   #     - '.github/workflows/backend-deploy.yml'
-
+  
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   GKE_CLUSTER: autopilot-cluster-1
@@ -55,19 +54,7 @@ jobs:
             print(f'❌ FastAPI 앱 import 실패: {e}')
             exit(1)
         
-        try:
-            import torch
-            print('✅ PyTorch import 성공')
-        except Exception as e:
-            print(f'❌ PyTorch import 실패: {e}')
-            exit(1)
-            
-        try:
-            from app.ml.anomaly_detection import anomaly_model
-            print('✅ 이상탐지 모델 import 성공')
-        except Exception as e:
-            print(f'❌ 이상탐지 모델 import 실패: {e}')
-            exit(1)
+        # 최소 핵심 의존성 확인
         
         print('✅ 모든 핵심 모듈 import 성공!')
         "
@@ -143,11 +130,11 @@ jobs:
         
         # 기존 StatefulSet이 있으면 삭제 (spec 수정 불가능하므로)
         kubectl delete statefulset timescaledb -n smart-factory --ignore-not-found=true
-        kubectl delete statefulset kafka -n smart-factory --ignore-not-found=true
+         kubectl delete statefulset kafka -n smart-factory --ignore-not-found=true
         
         # 인프라 서비스 배포 (순서 중요)
         kubectl apply -f k8s/timescaledb.yaml
-        kubectl apply -f k8s/kafka.yaml
+         kubectl apply -f k8s/kafka.yaml
         kubectl apply -f k8s/mqtt-redis.yaml
         kubectl apply -f k8s/monitoring.yaml
         
@@ -171,7 +158,7 @@ jobs:
         # 백엔드 서비스 롤아웃 상태 확인
         kubectl rollout status deployment/$DEPLOYMENT_NAME -n smart-factory
         kubectl rollout status deployment/data-collector -n smart-factory
-        kubectl rollout status deployment/ai-model-service -n smart-factory
+         kubectl rollout status deployment/kafka-timescale-sink -n smart-factory
         kubectl rollout status deployment/sensor-simulator -n smart-factory
 
     - name: Verify deployment
@@ -187,7 +174,7 @@ jobs:
         echo "=== 백엔드 로그 ==="
         kubectl logs -l app=smart-factory-backend -n smart-factory --tail=10
         
-        echo "=== AI 모델 서비스 로그 ==="
-        kubectl logs -l app=ai-model-service -n smart-factory --tail=10
+        echo "=== Kafka→Timescale 싱크 로그 ==="
+        kubectl logs -l app=kafka-timescale-sink -n smart-factory --tail=10
 
   
