--- a/.github/workflows/core-cluster-deploy.yml
+++ b/.github/workflows/core-cluster-deploy.yml
@@ -64,12 +64,7 @@ jobs:
             print(f'❌ 알림 서비스 import 실패: {e}')
             exit(1)
             
-        try:
-            from app.services.model_service import ModelService
-            print('✅ 모델 서비스 import 성공')
-        except Exception as e:
-            print(f'❌ 모델 서비스 import 실패: {e}')
-            exit(1)
+        # 레거시 학습 서비스(ModelService) 체크는 건너뜀 (serve_ml 서빙 경로 사용)
         
         print('✅ Core Cluster 핵심 모듈 import 성공!')
         "
