feat(serve_ml): integrate AI bundles end-to-end, switch backend to Python 3.11; fix DB schema for modalities JSONB; remove local tests; align anomalies events query; stabilize loader optional deps

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,4 @@
-# Python 3.9 베이스 이미지 사용
-FROM python:3.9-slim
+FROM python:3.11
 
 # 작업 디렉토리 설정
 WORKDIR /app
@@ -15,9 +14,15 @@ RUN apt-get update && apt-get install -y \
 # Python 의존성 파일 복사
 COPY requirements.txt .
 
+ENV PIP_NO_CACHE_DIR=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1 \
+    PIP_DEFAULT_TIMEOUT=100 \
+    PIP_PREFER_BINARY=1
+
 # Python 패키지 설치 (torch CPU 전용)
-RUN pip install torch==2.1.1 -f https://download.pytorch.org/whl/torch_stable.html && \
-    pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip && \
+    pip install torch==2.1.1 -f https://download.pytorch.org/whl/torch_stable.html && \
+    pip install -r requirements.txt
 
 # 애플리케이션 코드 복사
 COPY . .
