--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,13 +19,13 @@ kafka-python==2.0.2
 confluent-kafka==2.3.0
 aiokafka==0.12.0
 
-# AI/ML 모델 서빙 (필수)
+# AI/ML 모델 서빙 (Python 3.11 호환 고정)
 torch==2.1.1
 scikit-learn==1.3.2
 xgboost==2.0.2
-numpy==1.24.3
-pandas==2.0.3
-scipy==1.10.1
+numpy==1.26.4
+pandas==2.1.4
+scipy==1.11.4
 joblib==1.3.2
 
 # 인증 및 보안
