--- a/backend/docker-compose.override.yml
+++ b/backend/docker-compose.override.yml
@@ -10,7 +10,7 @@ services:
       - LOG_LEVEL=DEBUG
     volumes:
       - .:/app  # 코드 변경사항 실시간 반영
-      - /models:/app/models:ro
+      - /models:/app/models
     command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
 
   ai-model:
