--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^3.0.2",
+    "react-i18next": "^15.6.1",
+    "@fontsource/roboto": "^5.0.17",
+    "@fontsource/noto-sans-kr": "^5.0.7",
     "ws": "^8.17.0",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.6"
