--- a/backend/docker/grafana/provisioning/dashboards.yml
+++ b/backend/docker/grafana/provisioning/dashboards.yml
@@ -1,7 +1,7 @@
 apiVersion: 1
 
 providers:
-  - name: "default"
+  - name: "Sensors Provider"
     orgId: 1
     folder: "Sensors"
     type: file
@@ -9,5 +9,5 @@ providers:
     updateIntervalSeconds: 30
     options:
       path: /etc/grafana/provisioning/dashboards
-      foldersFromFilesStructure: true
+      foldersFromFilesStructure: false
 
