--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,14 +14,8 @@
     "jsx": "preserve",
     "incremental": true,
     "types": ["jest", "@testing-library/jest-dom", "node"],
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "plugins": [{ "name": "next" }],
+    "paths": { "@/*": ["./src/*"] }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules", "src/__tests__/**/*"]
