--- a/.github/workflows/compute-cluster-deploy.yml
+++ b/.github/workflows/compute-cluster-deploy.yml
@@ -504,7 +504,7 @@ jobs:
         
         # Kafka 서비스 외부 IP 확인
         KAFKA_EXTERNAL_IP=$(kubectl get svc kafka-service -n smart-factory-compute -o jsonpath='{.status.loadBalancer.ingress[0].ip}' 2>/dev/null || echo "pending")
-        echo "Kafka 외부 IP: $KAFKA_EXTERNAL_IP"
+        echo "Kafka 외부 IP: $KAFKA_EXTERNAL_IP (external listener 9093)"
         
         # AI 모델 서비스 외부 IP 확인
         AI_EXTERNAL_IP=$(kubectl get svc ai-model-service -n smart-factory-compute -o jsonpath='{.status.loadBalancer.ingress[0].ip}' 2>/dev/null || echo "pending")
@@ -546,5 +546,5 @@ jobs:
         
         echo "✅ 클러스터 간 통신 설정 완료"
         echo "Core Cluster에서 다음 엔드포인트들을 사용하세요:"
-        echo "- Kafka: $KAFKA_EXTERNAL_IP:9092"
+        echo "- Kafka: $KAFKA_EXTERNAL_IP:9093"
         echo "- AI Model Service: $AI_EXTERNAL_IP:8001"
