--- a/backend/k8s/smart-factory-apps.yaml
+++ b/backend/k8s/smart-factory-apps.yaml
@@ -57,6 +57,18 @@ spec:
             secretKeyRef:
               name: smart-factory-secrets
               key: POSTGRES_DB
+        - name: KAFKA_BOOTSTRAP_SERVERS
+          valueFrom:
+            secretKeyRef:
+              name: smart-factory-secrets
+              key: KAFKA_BOOTSTRAP_SERVERS
+              optional: true
+        - name: AI_MODEL_SERVICE_ENDPOINT
+          valueFrom:
+            secretKeyRef:
+              name: smart-factory-secrets
+              key: AI_MODEL_SERVICE_ENDPOINT
+              optional: true
         envFrom:
         - configMapRef:
             name: smart-factory-config
@@ -79,15 +91,7 @@ spec:
             port: 8000
           initialDelaySeconds: 5
           periodSeconds: 5
-        volumeMounts:
-        - name: models-storage
-          mountPath: /app/models
-          readOnly: true
-      volumes:
-      - name: models-storage
-        hostPath:
-          path: /models
-          type: DirectoryOrCreate
+
 
 ---
 apiVersion: apps/v1
@@ -111,6 +115,13 @@ spec:
       - name: data-collector
         image: gcr.io/PROJECT_ID/smart-factory-backend:latest
         command: ["python", "-m", "app.services.data_collector"]
+        env:
+        - name: KAFKA_BOOTSTRAP_SERVERS
+          valueFrom:
+            secretKeyRef:
+              name: smart-factory-secrets
+              key: KAFKA_BOOTSTRAP_SERVERS
+              optional: true
         envFrom:
         - configMapRef:
             name: smart-factory-config
@@ -144,6 +155,13 @@ spec:
       - name: kafka-timescale-sink
         image: gcr.io/PROJECT_ID/smart-factory-backend:latest
         command: ["python", "-m", "app.services.kafka_timescale_sink"]
+        env:
+        - name: KAFKA_BOOTSTRAP_SERVERS
+          valueFrom:
+            secretKeyRef:
+              name: smart-factory-secrets
+              key: KAFKA_BOOTSTRAP_SERVERS
+              optional: true
         envFrom:
         - configMapRef:
             name: smart-factory-config
@@ -177,6 +195,13 @@ spec:
       - name: sensor-simulator
         image: gcr.io/PROJECT_ID/smart-factory-backend:latest
         command: ["python", "-m", "app.services.sensor_simulator"]
+        env:
+        - name: KAFKA_BOOTSTRAP_SERVERS
+          valueFrom:
+            secretKeyRef:
+              name: smart-factory-secrets
+              key: KAFKA_BOOTSTRAP_SERVERS
+              optional: true
         envFrom:
         - configMapRef:
             name: smart-factory-config
