--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,7 +1,4 @@
-# 통합 Docker Compose 파일 (기존 호환성 유지)
-# 새로운 클러스터 분리 구조를 원하면 start-local.sh 스크립트를 사용하세요
-
-version: '3.8'
+# 통합 Docker Compose 파일 (Core/Compute 로컬 시뮬레이션 가능)
 
 services:
   # 백엔드 API 서버
@@ -19,14 +16,18 @@ services:
       - REDIS_URL=redis://redis:6379
       - DEBUG=${DEBUG:-false}
       - ENVIRONMENT=${ENVIRONMENT:-local}
-      - AI_MODEL_SERVICE_ENDPOINT=http://ai-model:8001
+      - RUL_CALIB_PATH=/app/configs/rul_calib.json
+      
+      - SERVE_ML_ROOT=/app/serve_ml
     depends_on:
       - timescaledb
       - mqtt
       - kafka
       - redis
     volumes:
-      - /models:/app/models
+      - ./models:/app/models:ro
+      - ./serve_ml:/app/serve_ml:ro
+      - ./configs:/app/configs:ro
     networks:
       - app-network
     healthcheck:
@@ -44,43 +45,49 @@ services:
       - MQTT_BROKER_HOST=mqtt
       - MQTT_BROKER_PORT=1883
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - DIRECT_TIMESCALE_WRITE=false
+      - DATABASE_URL=postgresql://${POSTGRES_USER:-user}:${POSTGRES_PASSWORD:-password}@timescaledb:5432/${POSTGRES_DB:-predictive_maintenance}
+      - TIMESCALE_URL=postgresql://${POSTGRES_USER:-user}:${POSTGRES_PASSWORD:-password}@timescaledb:5432/${POSTGRES_DB:-predictive_maintenance}
       - DEBUG=${DEBUG:-false}
       - ENVIRONMENT=${ENVIRONMENT:-local}
     depends_on:
       - mqtt
       - kafka
+      - timescaledb
     networks:
       - app-network
     restart: unless-stopped
 
-  # AI 모델 서비스 (Kafka Consumer) - 포트 8001로 변경
-  ai-model:
-    build:
-      context: .
-      dockerfile: Dockerfile.ai-service
-    ports:
-      - "8001:8001"
+  # 센서 시뮬레이터 (MQTT 퍼블리시)
+  sensor-simulator:
+    build: .
+    command: python -m app.services.unity_sensor_simulator --host mqtt --port 1883 --mode realtime --interval 1.0
     environment:
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
-      - DATABASE_URL=postgresql://${POSTGRES_USER:-user}:${POSTGRES_PASSWORD:-password}@timescaledb:5432/${POSTGRES_DB:-predictive_maintenance}
-      - MODEL_PATH=/app/models
-      - DEBUG=${DEBUG:-false}
-      - ENVIRONMENT=${ENVIRONMENT:-local}
-      - AI_SERVICE_PORT=8001
-    depends_on:
-      - kafka
-      - timescaledb
+      - MQTT_BROKER_HOST=mqtt
+      - MQTT_BROKER_PORT=1883
+      - SERVE_ML_ROOT=/app/serve_ml
     volumes:
-      - /models:/app/models:ro
+      - ./serve_ml:/app/serve_ml:ro
+    depends_on:
+      - mqtt
     networks:
       - app-network
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
+
+  kafka-timescale-sink:
+    build: .
+    command: python -m app.services.kafka_timescale_sink
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - KAFKA_SENSOR_RAW_TOPIC=sensor-data-raw
+      - TIMESCALE_URL=postgresql://${POSTGRES_USER:-user}:${POSTGRES_PASSWORD:-password}@timescaledb:5432/${POSTGRES_DB:-predictive_maintenance}
+    depends_on:
+      - kafka
+      - timescaledb
+    networks:
+      - app-network
+    restart: unless-stopped
+
 
   # Zookeeper (Kafka 의존성)
   zookeeper:
@@ -136,6 +143,7 @@ services:
       - "5432:5432"
     volumes:
       - timescale_data:/var/lib/postgresql/data
+      - ./scripts/init_timescaledb.sql:/docker-entrypoint-initdb.d/init_timescaledb.sql:ro
     networks:
       - app-network
 
@@ -191,6 +199,7 @@ services:
       - "3002:3000"
     environment:
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:8000}
+      - NEXT_PUBLIC_WEBSOCKET_URL=${NEXT_PUBLIC_WEBSOCKET_URL:-ws://localhost:8000/api/v1/ws}
       - NODE_ENV=${NODE_ENV:-development}
     depends_on:
       - backend
@@ -204,6 +213,15 @@ services:
       - "3001:3000"
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD:-admin}
+      - POSTGRES_USER=${POSTGRES_USER:-user}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-password}
+      - GF_SECURITY_ALLOW_EMBEDDING=true
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Viewer
+      - GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS=grafana-exploretraces-app,grafana-metricsdrilldown-app,grafana-pyroscope-app
+      - GF_INSTALL_PLUGINS=grafana-exploretraces-app,grafana-metricsdrilldown-app,grafana-pyroscope-app,grafana-postgresql-datasource
+      - GF_LOG_LEVEL=debug
+      - GF_LOG_FILTERS=provisioning:debug,provisioning.datasources:debug
     volumes:
       - grafana_data:/var/lib/grafana
       - ./docker/grafana/dashboards:/etc/grafana/provisioning/dashboards
