feat: Grafana 모니터링 대시보드 및 데이터소스 설정 개선

--- a/backend/docker/grafana/provisioning/dashboards.yml
+++ b/backend/docker/grafana/provisioning/dashboards.yml
@@ -9,5 +9,4 @@ providers:
     updateIntervalSeconds: 30
     options:
       path: /etc/grafana/provisioning/dashboards
-      foldersFromFilesStructure: false
-
+      foldersFromFilesStructure: true
