--- a/backend/docker/grafana/datasources/datasource.yml
+++ b/backend/docker/grafana/datasources/datasource.yml
@@ -1,19 +1,27 @@
 apiVersion: 1
 
+deleteDatasources:
+  - name: TimescaleDB
+    orgId: 1
+
 datasources:
   - name: TimescaleDB
+    uid: timescaledb-uid
     type: postgres
     access: proxy
+    orgId: 1
     isDefault: true
     url: timescaledb:5432
-    user: ${POSTGRES_USER}
+    database: predictive_maintenance
+    user: user
     secureJsonData:
-      password: ${POSTGRES_PASSWORD}
+      password: password
     jsonData:
+      database: predictive_maintenance
       sslmode: disable
       postgresVersion: 1400
       timescaledb: true
       connMaxLifetime: 14400
       maxOpenConns: 100
       maxIdleConns: 100
-
+    editable: false
