k8s(frontend): add NEXT_PUBLIC_WEBSOCKET_URL and NEXT_PUBLIC_GRAFANA_BASE_URL envs

--- a/backend/k8s/frontend-apps.yaml
+++ b/backend/k8s/frontend-apps.yaml
@@ -40,6 +40,10 @@ spec:
         env:
         - name: NEXT_PUBLIC_API_URL
           value: "http://smart-factory-backend:8000"
+        - name: NEXT_PUBLIC_WEBSOCKET_URL
+          value: "ws://smart-factory-backend:8000/api/v1/ws"
+        - name: NEXT_PUBLIC_GRAFANA_BASE_URL
+          value: "http://grafana:3000"
         - name: NODE_ENV
           value: "production"
         resources:
