--- a/.github/workflows/compute-cluster-deploy.yml
+++ b/.github/workflows/compute-cluster-deploy.yml
@@ -30,10 +30,10 @@ jobs:
         pip install pytest pytest-asyncio torch scikit-learn
 
     - name: Run AI service import (legacy)
-      run: |
+      run: |-
         cd backend
         # AI/ML 서비스 모듈 import 테스트
-        python -c "
+        python - <<'PY'
         print('=== AI/ML Services 모듈 Import 테스트 ===')
         try:
             from app.services.ai_model_service import AIModelService
@@ -41,7 +41,7 @@ jobs:
         except Exception as e:
             print(f'❌ AI 모델 서비스 import 실패: {e}')
             exit(1)
-        
+
         try:
             import torch
             print('✅ PyTorch import 성공')
@@ -50,9 +50,9 @@ jobs:
         except Exception as e:
             print(f'❌ PyTorch import 실패: {e}')
             exit(1)
-            
-         print('✅ Compute Cluster 레거시 경로 import 확인 완료!')
-        "
+
+        print('✅ Compute Cluster 레거시 경로 import 확인 완료!')
+        PY
       env:
         KAFKA_BOOTSTRAP_SERVERS: localhost:9092
         REDIS_URL: redis://localhost:6379
@@ -523,23 +523,9 @@ jobs:
           - Ingress
           - Egress
           ingress:
-          - from: []
-            ports:
-            - protocol: TCP
-              port: 9092
-            - protocol: TCP
-              port: 8001
+          - {} # 모든 인바운드 허용 (초기 설정; 필요 시 CIDR/네임스페이스로 제한)
           egress:
-          - to: []
-            ports:
-            - protocol: TCP
-              port: 80
-            - protocol: TCP
-              port: 443
-            - protocol: TCP
-              port: 9092
-            - protocol: TCP
-              port: 8001
+          - {} # 모든 아웃바운드 허용 (초기 설정)
         EOF
         
         kubectl apply -f k8s/cross-cluster-network-policy.yaml
