--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@sentry/nextjs": "^9.34.0",
     "@tanstack/react-query": "^5.81.5",
     "framer-motion": "^12.23.0",
+    "i18next": "23.11.5",
     "jsonwebtoken": "^9",
     "next": "15.3.4",
     "next-i18next": "^15.4.2",
@@ -33,6 +34,7 @@
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/i18next": "^13.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
