--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: '20'
       - name: Install dependencies
-        run: npm ci --ignore-scripts
+        run: npm ci --ignore-scripts && npm i -D ts-node --ignore-scripts
       - name: Ensure clean Next cache
         run: rm -rf .next || true
       - name: Run lint
