--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "jest-environment-jsdom": "^30.0.2",
     "jest-websocket-mock": "^2.5.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
