ci(core): add @testing-library/dom devDep install and clean Next cache before tests; fix frontend install to use npm ci --ignore-scripts

--- a/.github/workflows/core-cluster-deploy.yml
+++ b/.github/workflows/core-cluster-deploy.yml
@@ -87,7 +87,13 @@ jobs:
     - name: Install frontend dependencies
       run: |
         cd frontend
-        npm install --legacy-peer-deps
+        npm ci --ignore-scripts
+        npm i -D ts-node @testing-library/dom --ignore-scripts
+
+    - name: Ensure clean Next cache
+      run: |
+        cd frontend
+        rm -rf .next || true
 
     - name: Run frontend lint
       run: |
